--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,7 +1,6 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor= DP-1,3840x2160,0x0, 1.5
-
+monitor = DP-1, 3840x2160,0x0,1.5
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 source=~/.config/hypr/execs.conf
